Bug 344378 - Implement nsSVGPathElement::GetPointAtLength. Patch by amenzie@us.ibm.com, r=tor, sr=roc.